--- a/src/main/resources/static/css/nicepage.css
+++ b/src/main/resources/static/css/nicepage.css
@@ -39489,19 +39489,9 @@ header.sticky {
     z-index: 100;
     background: #ffffff; /* oder eine andere Farbe Ihrer Wahl */
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1); /* optional, fügt einen Schatten hinzu */
-    animation: fadeInDown 0.5s ease-in-out forwards; /* Animation */
 }
 
-@keyframes fadeInDown {
-    from {
-        transform: translateY(-50px);
-        opacity: 0;
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
+
 body {
     padding-top: 81px;  /* Passen Sie diesen Wert an die tatsächliche Höhe Ihres Headers an */
 }
